# libopenpty

./: .gitignore  Makefile.am  Makefile.am.common  Makefile.in  README  README.md  config.h.in  configure  configure.ac  libopenpty.pc.in
include/: libopenpty.h
src/: Makefile.am  Makefile.in  pty_common.c  pty_getpty.c  pty_socketpair.c  pty_solaris.c  test_openpty.c
